--- a/index.html
+++ b/index.html
@@ -11,11 +11,11 @@
 </header>
 <body onload="gameLoop()" onkeydown="keyDown(event)" onkeyup="keyUp(event)">
 
-   <!-- The Level -->
+   <!-- playing area -->
    <div>
    </div>
 
-   <!-- The Character -->
+   <!-- pizza image -->
    <img id='character' src='pizza.png'>
 
 </body>
